--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.127.198.132:9980/mithuntechnologies/repository/flipkart-releases/</url>
+	      <name>Flipkart Releases Repository</name>
+	      <url>http://35.154.111.224:8081/repository/flipkart-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.127.198.132:9980/mithuntechnologies/repository/flipkart-snapshots/</url>
+	      <name>Flipkart Snapshot Repository </name>
+	      <url>http://35.154.111.224:8081/repository/flipkart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
